--- a/app/views/signup/_signup-step-arrows.slim
+++ b/app/views/signup/_signup-step-arrows.slim
@@ -3,26 +3,26 @@
   .arrow class=active_arrow?(step, 1)
     .back.part
     .content
-      .title Step 1
-      label General Info
+      .title =t'account_setup.progress_bar.step1'
+      label =t'account_setup.progress_bar.label1'
     .point.part
   
   .arrow class=active_arrow?(step, 2)
     .content
-      .title Step 2
-      label Contact Info
+      .title =t'account_setup.progress_bar.step2'
+      label =t'account_setup.progress_bar.label2'
     .point.part
   
   .arrow class=active_arrow?(step, 3)
     .content
-      .title Step 3
-      label Site Picture
+      .title =t'account_setup.progress_bar.step3'
+      label =t'account_setup.progress_bar.label3'
     .point.part
   
   .arrow class=active_arrow?(step, 4)
     .content
-      .title Step 4
-      label Start Building!
+      .title =t'account_setup.progress_bar.step4'
+      label =t'account_setup.progress_bar.label4'
     .point.part
   
   .clearfix
