--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -387,7 +387,7 @@ ul.fancy-selectable {
     margin-right: 4px !important; } }
 
 label.help { padding-bottom: 4px; }
-.help-bubble { cursor: pointer; }
+.help-bubble { cursor: pointer; margin: 0px 4px; }
 
 .hr {
   border-top: 1px solid $light-border;
