--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -353,7 +353,8 @@ label.help {
   padding-bottom: 4px; }
 
 .help-bubble {
-  cursor: pointer; }
+  cursor: pointer;
+  margin: 0px 4px; }
 
 .hr {
   border-top: 1px solid #b3b3b3;
