Don't reset new site source on error. Closes #224

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -135,7 +135,7 @@
 
         br
         br
-        input type="radio" name="create_type" value="type" checked="checked" New Site
+        input type="radio" name="create_type" value="type" New Site
         input type="radio" name="create_type" value="source" Copy Site
 
         .site-type
