--- a/app/views/signup/default/step-4.slim
+++ b/app/views/signup/default/step-4.slim
@@ -2,22 +2,22 @@
 
 #account-setup-box.center-box
   .content
-    h2 =t'account_setup.final.title'
-    h3 =t'account_setup.final.site_online'
+    h2 ==t'account_setup.final.title'
+    h3 ==t'account_setup.final.site_online'
     br
     p 
-    	=t'account_setup.final.site_url'
+    	==t'account_setup.final.site_url'
     	a target="preview-mobile-site" href=@company.mobile_url 
     		=@company.mobile_url
     	' .
     br
-    p =t'account_setup.final.auto_redirect'
+    p ==t'account_setup.final.auto_redirect'
     br
-    p =t'account_setup.final.easy_update'
+    p ==t'account_setup.final.easy_update'
     br
-    p =t'account_setup.final.help'
+    p ==t'account_setup.final.help'
     br
-    p =t'account_setup.final.customize'
+    p ==t'account_setup.final.customize'
     br
     br
 
