--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -2,6 +2,7 @@
 
 // global variables
 window.g = {
+  i18n: <%=raw t("javascript").to_json %>,
   width: 320,
   height: 480,
   topBarMaxHeight: 127,
