--- a/app/views/builder/_builder-help.slim
+++ b/app/views/builder/_builder-help.slim
@@ -1,10 +1,10 @@
 #builder-help
-  label To Start:
+  label =t'builder.widget_editor.to_start'
 
   p.help-text
-    a.help-link href="http://help.yomobi.com/Mobile/SiteBuilder" target="_blank" Help
+    a.help-link href="http://help.yomobi.com/Mobile/SiteBuilder" target="_blank" =t'builder.widget_editor.help'
   
-  p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
+  p =t'builder.widget_editor.drag_widget'
   img.help-img.first src="/images/builder-help-drag.png"
   .spacer
   .or
@@ -13,8 +13,8 @@
         tr
           td
             #l
-          td OR
+          td =t'builder.widget_editor.or'
           td
             #r
-  p Click on a widget in the Mobile Phone Emulator to enter your information.
+  p =t'builder.widget_editor.edit_widget'
   img.help-img.second src="/images/builder-help-edit.png"
