--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,6 +1,6 @@
 #nav
-  a href=destroy_user_session_path Sign Out
-  a href=help_url target="_blank" Help
-  a href=site_manager_path Site Manager
-  a href=account_path Account Settings
-  a href=builder_main_path Website Builder
+  a href=destroy_user_session_path =t'navigation_bar.sign_out'
+  a href=help_url target="_blank" =t'navigation_bar.help'
+  a href=site_manager_path =t'navigation_bar.site_manager'
+  a href=account_path =t'navigation_bar.account_settings'
+  a href=builder_main_path =t'navigation_bar.site_builder'
