--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -30,7 +30,7 @@
           = file_field :step_data, :logo, :accept => "image/*"
           input type="submit" value=t'account_setup.button.upload' disabled="disabled"
           .load-box.rfloat.hide
-            span.success =t'general.status.working'
+            span.success =t'status.working'
             div.loader.rfloat style="margin:2px 4px 0 5px"
 
     
