--- a/app/views/shared/_recaptcha.html
+++ b/app/views/shared/_recaptcha.html
@@ -1,8 +1,8 @@
 <div id="recaptcha_container">
     <div id="recaptcha_image"></div>
    <div id="recaptcha_label">
-       <label for="recaptcha_response_field">Type the two words:  </label>
-       <a href="javascript:Recaptcha.reload();">(Get New Words)</a>
+       <label for="recaptcha_response_field"><%=t'recaptcha.type_words'%></label>
+       <a href="javascript:Recaptcha.reload();"><%=t'recaptcha.new_words'%></a>
     </div>
     <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" autocomplete="off" class="text" />
 </div>
