i18n: Updated most of the home page

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -42,6 +42,5 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
         li Easily customizable content
         li Subscriber notification
     .content-signup
-      a href=new_user_registration_path
-        img src="images/new_design/signup-button1.png" border="0"
+      a.signup-btn.signup-btn-body href=new_user_registration_path =t'sign_up.sign_up'
 
