--- a/app/views/shared/_header-signin-form_new.slim
+++ b/app/views/shared/_header-signin-form_new.slim
@@ -19,5 +19,5 @@
       br
       a.signin-whitetext  href="/users/password/new" =t'sign_in.forgot_password'
 
-    .signin-button
-      = image_submit_tag("new_design/signin-button.png")
+    .pretty-button.signin-button
+      submit_tag =t'sign_in.sign_in'
