--- a/app/views/home/_image-slider.slim
+++ b/app/views/home/_image-slider.slim
@@ -3,9 +3,9 @@
     li
       .slider-text
         .content-heading2
-          span.blue-text Welcome to YoMobi
-        .content-text2 Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.
-        img.read-more src="images/new_design/see-mobile-matter.png" onclick="document.location='why-mobile'" style="cursor:pointer;margin-left:10px;"
+          span.blue-text =t'homepage.welcome'
+        .content-text2 ==t'homepage.message'
+        a.pretty-button.read-more href="/why-mobile" =t'homepage.why_mobile_matters'
       
       erb:
         <iframe width="435" height="255" style="margin-top:20px"src="http://player.vimeo.com/video/36200802?title=0&amp;byline=0&amp;portrait=0" frameborder="0"      webkitAllowFullScreen mozallowfullscreen allowfullscreen ></iframe>	
