--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -8,6 +8,28 @@ body {
 	font-size: 14px;
 	color:#000000;
 }
+
+.pretty-button {
+  background: #0290ee;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  color: white;
+  display: block;
+  float: left;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: normal;
+  padding: 6px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  cursor: pointer; 
+}
+
 .passwordlink {
 	color:#f0f0f2;
 	text-decoration:none;
@@ -74,25 +96,50 @@ body {
 	width:142px;
 	height:32px;
 }
-.topsignup {
+.signup-btn {
     background:url(../images/new_design/signup-button.png);
 	float:right;
-	width:162px;
-	height:64px;
-	margin-top:21px;
+	text-decoration: none;
+	font-family: Impact, Charcoal, sans-serif;
+	font-family: ‘Arial Narrow’, sans-serif;
+	font-size: 34px;
+	font-weight: bold;
+  	padding: 15px;
+	color: #2c1d06;
+  	border-radius: 4px;
+  	-moz-border-radius: 10px;
+  	-webkit-border-radius: 10px;
+  	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  	-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
+.signup-btn-top {
+	margin-top: 21px;
+  	background: #0290ee;	
+}
+
+.signup-btn-body {
+  	background: #ff9f02;	
+}
+
+
 .signin-bg {
-	float:right;
-	width:328px;
-	height:65px;
-	background:url(../images/new_design/signin-bg.png) no-repeat;
-	margin-right:7px;
-	margin-top:21px;
+	float: right;
+	height: 65px;
+  	background: #ff9f02;
+  	border-radius: 4px;
+  	-moz-border-radius: 10px;
+  	-webkit-border-radius: 10px;
+  	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  	-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	margin-right: 30px;
+	margin-top: 21px;
 }
 .signin-section1 {
 	float:left;
-	width:125px;
+	width:130px;
 	margin-top:2px;
 	margin-left:13px;
 }
@@ -136,9 +183,8 @@ body {
 }
 .signin-button {
 	float:left;
-	width:45px;
-	height:23px;
-	margin-top:20px;
+	line-height:10px;
+	margin:20px 12px 0 4px;
 }
 .menumain {
 	float:left;
@@ -241,7 +287,7 @@ body {
     margin-left:30px;
 }
 .read-more{
-    margin-top: 10px;
+    margin: 10px 0 0 10px;
     cursor: pointer;
 }
 .content-text2{
@@ -309,8 +355,6 @@ body {
 }
 .content-signup {
 	float:left;
-	width:215px;
-	height:76px;
 	margin-top:80px;
 	margin-left:50px;
 }
@@ -333,15 +377,6 @@ body {
 	color:#3a3a3a;
 	font-size:13px;
 	line-height:20px;
-}
-
-.signin-bg {
-float: right;
-width: 366px;
-height: 65px;
-background: url(../images/new_design/signin-bg.png) no-repeat;
-margin-right: 30px;
-margin-top: 21px;
 }
 
 .social-facebook {
